tdf#122217: Don't allow to change readonly content with Alt+X

Change-Id: Ic350503e67f27bd59ccca3876a1f3b566bb187e4
Reviewed-on: https://gerrit.libreoffice.org/65490
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>